# lego-railway

./: .gitignore  LICENSE  README.md
controllers/: CMakeLists.txt  lego_railway.ino
controllers/DispatchQueue/: DispatchQueue.cpp  DispatchQueue.h
controllers/Points/: Points.cpp  Points.h
controllers/SignalController/: SignalController.cpp  SignalController.h
controllers/TrainController/: TrainController.cpp  TrainController.h
docs/: circuits.md  parts.md
eagle/: DESCRIPTION  controller.sch  rfid.sch
rfid/: CMakeLists.txt  rfid-trains.ino
